# sqipe

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
qbey/: Cargo.toml
qbey-mysql/: Cargo.toml  README.md
qbey-mysql/src/: delete.rs  delete_tests.rs  index_hint.rs  insert.rs  insert_tests.rs  lib.rs  select.rs  select_tests.rs  update.rs  update_tests.rs
qbey-mysql/tests/: sqlx_mysql.rs
qbey-mysql/tests/sqlx_mariadb/: common.rs  delete.rs  insert.rs  update.rs
qbey-mysql/tests/sqlx_mysql/: common.rs  delete.rs  insert.rs  main.rs  select.rs  update.rs
qbey/benches/: query_bench.rs
qbey/src/: aggregate.rs  column.rs  delete.rs  insert.rs  join.rs  lib.rs  like.rs  prelude.rs  query.rs  raw_sql.rs  schema.rs  update.rs  value.rs  where_clause.rs
qbey/src/renderer/: delete.rs  insert.rs  mod.rs  pipe.rs  standard.rs  update.rs
qbey/src/tree/: mod.rs
qbey/tests/: aggregate_test.rs  cte_test.rs  delete_test.rs  dialect_test.rs  insert_struct_test.rs  insert_test.rs  join_test.rs  libsql_test.rs  like_test.rs  postgres_test.rs  rusqlite_test.rs  schema_test.rs  select_test.rs  select_window_test.rs  sqlx_mysql.rs  sqlx_sqlite.rs  subquery_test.rs  tokio_postgres_test.rs  union_test.rs  update_test.rs  where_test.rs
qbey/tests/common/: mod.rs
scripts/: bump-version.sh
sqipe/: Cargo.toml
sqipe-bigquery/: Cargo.toml
sqipe-bigquery/src/: lib.rs
sqipe-mysql/: Cargo.toml  README.md
sqipe-mysql/src/: lib.rs
sqipe-mysql/tests/: sqlx_mysql.rs
sqipe-postgresql/: Cargo.toml
sqipe-postgresql/src/: lib.rs
sqipe/src/: aggregate.rs  column.rs  delete.rs  join.rs  lib.rs  like.rs  query.rs  raw_sql.rs  tree.rs  update.rs  where_clause.rs
sqipe/src/builder/: mod.rs  pipe.rs  standard.rs
sqipe/src/renderer/: mod.rs  pipe.rs  standard.rs  update.rs
sqipe/src/tree/: mod.rs
sqipe/tests/: aggregate_test.rs  delete_test.rs  dialect_test.rs  join_test.rs  like_test.rs  postgres_test.rs  rusqlite_test.rs  select_test.rs  sqlx_sqlite.rs  subquery_test.rs  tokio_postgres_test.rs  union_test.rs  update_test.rs  where_test.rs
src/: lib.rs
