[package]
name = "qbey-mysql"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
qbey = { path = "../qbey" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = { version = "0.27", features = ["watchdog"] }
ctor = "0.6"
testcontainers-modules = { version = "0.15", features = ["mysql", "mariadb"] }

[features]
returning = ["qbey/returning"]
test-sqlx = []
full = ["returning", "test-sqlx"]
