[package]
name = "qbey-mysql"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "MySQL dialect extension for the qbey SQL query builder"
repository = "https://github.com/walf443/qbey"
changelog = "https://github.com/walf443/qbey/blob/main/CHANGELOG.md"
readme = "./README.md"
keywords = ["sql", "query-builder", "database", "mysql"]
categories = ["database"]

[dependencies]
qbey = { version = "0.2", path = "../qbey" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = { version = "0.27", features = ["watchdog"] }
ctor = "0.8"
testcontainers-modules = { version = "0.15", features = ["mysql", "mariadb"] }

[features]
returning = ["qbey/returning"]
test-sqlx = []
full = ["returning", "test-sqlx"]
