[package]
name = "qbey"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32" }
tokio-postgres = "0.7"
postgres = "0.19"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql"] }

[features]
test-sqlx = []
test-sqlx-mysql = []
test-rusqlite = []
test-tokio-postgres = []
test-postgres = []
full = ["test-sqlx", "test-sqlx-mysql", "test-rusqlite", "test-tokio-postgres", "test-postgres"]
