[package]
name = "qbey"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A type-safe SQL query builder for Rust"
repository = "https://github.com/walf443/qbey"
readme = "../README.md"
keywords = ["sql", "query-builder", "database"]
categories = ["database"]

[dependencies]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32" }
tokio-postgres = "0.7"
postgres = "0.19"
testcontainers = { version = "0.27", features = ["watchdog"] }
ctor = "0.6"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql"] }
criterion = { version = "0.8" }

[[bench]]
name = "query_bench"
harness = false

[features]
returning = []
test-sqlx = []
test-sqlx-mysql = []
test-rusqlite = []
test-tokio-postgres = []
test-postgres = []
full = ["returning", "test-sqlx", "test-sqlx-mysql", "test-rusqlite", "test-tokio-postgres", "test-postgres"]
