[package]
name = "qbey"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A type-safe SQL query builder for Rust"
repository = "https://github.com/walf443/qbey"
changelog = "https://github.com/walf443/qbey/blob/main/CHANGELOG.md"
readme = "../README.md"
keywords = ["sql", "query-builder", "database"]
categories = ["database"]

[dependencies]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32" }
tokio-postgres = "0.7"
postgres = "0.19"
testcontainers = { version = "0.27", features = ["watchdog"] }
dtor = "0.12"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql"] }
criterion = { version = "0.8" }
libsql = { version = "0.9", default-features = false, features = ["core"] }

[[bench]]
name = "query_bench"
harness = false

[features]
returning = []
conflict = []
test-sqlx = []
test-sqlx-mysql = []
test-rusqlite = []
test-tokio-postgres = []
test-postgres = []
test-libsql = []
full = ["returning", "conflict", "test-sqlx", "test-sqlx-mysql", "test-rusqlite", "test-tokio-postgres", "test-postgres", "test-libsql"]
