[package]
name = "sqipe-mysql"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sqipe = { path = "../sqipe" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["mysql"] }

[features]
test-sqlx = []
full = ["test-sqlx"]
