[package]
name = "sqipe"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32" }
tokio-postgres = "0.7"
postgres = "0.19"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[features]
test-sqlx = []
test-rusqlite = []
test-tokio-postgres = []
test-postgres = []
full = ["test-sqlx", "test-rusqlite", "test-tokio-postgres", "test-postgres"]
